fixing overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 body{
   background-color: white;
   font-family: 'Inter', sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
     width: 8px;
